monitoring/deploy/prometheus/04-prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    training-monitoring: "true"
  name: prometheus
  namespace: training-monitoring
spec:
  clusterIP: 172.30.136.92
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus
  sessionAffinity: None
  type: ClusterIP
