monitoring/deploy/prometheus/05-prometheus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    training-monitoring: "true"
  name: prometheus
  namespace: training-monitoring
spec:
  host: prometheus-training-monitoring.apps.ocp-test.<domain_name>
  port:
    targetPort: 9090
  to:
    kind: Service
    name: prometheus
    weight: 100
  wildcardPolicy: None
